[metadata]
name =
version = 0.1
author = mclds
author_email = mclds@protonmail.com
description =
long_description = file: README.md
url =
classifiers =
    Programming Language :: Python :: 3.10
    Development Status :: 4 - Beta
    Environment :: Console
    Framework :: Celery
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
verbose = 2
install_requires=
    mysql.connector
    snoop
    isort
    click
show_source = True

[flake8]
extend-ignore = F401 F841 W605 E704, E722, E1, W1, E2, W2, E3, W3, E4, W4, E5, W5, E731
max-line-length = 180
verbose = 2
show-source = True

[options.entry_points]
    console_scripts =
